--- a/app/src/main/res/layout/activity_question_multiple.xml
+++ b/app/src/main/res/layout/activity_question_multiple.xml
@@ -8,100 +8,116 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/very_small_margin"
+        android:layout_marginEnd="@dimen/very_small_margin"
         android:orientation="horizontal"
         android:weightSum="2">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Category:"
+            android:text="@string/category"
             android:textColor="@color/colorAccent"
-            android:textSize="20dp"/>
+            android:textSize="@dimen/small_text_size"/>
         <TextView
             android:id="@+id/category_text"
             android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/colorPrimary"
-            android:text="Category"
+            android:text="@string/category_question"
             android:gravity="center"
-            android:textSize="15dp"/>
+            android:textSize="@dimen/small_text_size"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/very_small_margin"
+        android:layout_marginEnd="@dimen/very_small_margin"
         android:orientation="horizontal"
         android:weightSum="2">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Difficulty:"
+            android:text="@string/difficulty"
             android:textColor="@color/colorAccent"
-            android:textSize="20dp"/>
+            android:textSize="@dimen/small_text_size"/>
         <TextView
             android:id="@+id/difficulty"
             android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/colorPrimary"
-            android:text="Difficulty"
+            android:text="@string/difficulty_question"
             android:gravity="center"
-            android:textSize="15dp"/>
+            android:textSize="@dimen/small_text_size"/>
     </LinearLayout>
     <TextView
         android:id="@+id/question"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="@dimen/average_margin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@color/colorPrimary"
-        android:text="Question"
+        android:layout_marginStart="@dimen/very_small_margin"
+        android:layout_marginEnd="@dimen/very_small_margin"
+        android:text="@string/question"
         android:gravity="center"
-        android:textSize="15dp"/>
+        android:textSize="@dimen/small_text_size"/>
     <Button
         android:id="@+id/response1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="4dp"
+        android:layout_marginTop="@dimen/very_small_margin"
+        android:layout_marginBottom="@dimen/very_small_margin"
+        android:layout_marginStart="@dimen/very_small_margin"
+        android:layout_marginEnd="@dimen/very_small_margin"
         android:background="@drawable/answer_background"
-        android:text="Response1"
-        android:textSize="15dp"/>
+        android:text="@string/response1"
+        android:textSize="@dimen/small_text_size"/>
     <Button
         android:id="@+id/response2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:layout_marginBottom="4dp"
+        android:layout_marginTop="@dimen/very_small_margin"
+        android:layout_marginBottom="@dimen/very_small_margin"
+        android:layout_marginStart="@dimen/very_small_margin"
+        android:layout_marginEnd="@dimen/very_small_margin"
         android:background="@drawable/answer_background"
-        android:text="Response2"
-        android:textSize="15dp"/>
+        android:text="@string/response2"
+        android:textSize="@dimen/small_text_size"/>
     <Button
         android:id="@+id/response3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:layout_marginBottom="4dp"
+        android:layout_marginTop="@dimen/very_small_margin"
+        android:layout_marginBottom="@dimen/very_small_margin"
+        android:layout_marginStart="@dimen/very_small_margin"
+        android:layout_marginEnd="@dimen/very_small_margin"
         android:background="@drawable/answer_background"
-        android:text="Response3"
-        android:textSize="15dp"/>
+        android:text="@string/response3"
+        android:textSize="@dimen/small_text_size"/>
     <Button
         android:id="@+id/response4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:layout_marginBottom="4dp"
+        android:layout_marginTop="@dimen/very_small_margin"
+        android:layout_marginBottom="@dimen/very_small_margin"
+        android:layout_marginStart="@dimen/very_small_margin"
+        android:layout_marginEnd="@dimen/very_small_margin"
         android:background="@drawable/answer_background"
-        android:text="Response4"
-        android:textSize="15dp"/>
+        android:text="@string/response4"
+        android:textSize="@dimen/small_text_size"/>
 
     <Button
         android:id="@+id/answer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
-        android:text="Next Question"
-        android:textSize="15dp"/>
+        android:layout_marginTop="@dimen/average_padding"
+        android:layout_marginStart="@dimen/very_small_margin"
+        android:layout_marginEnd="@dimen/very_small_margin"
+        android:text="@string/next_question"
+        android:textSize="@dimen/small_text_size"/>
 
 
 </LinearLayout>
